--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Spatch Web App",
+  "name": "BasicWebApp",
   "version": "0.0.1",
-  "description": "Spatch Web App",
+  "description": "Basic Web App",
   "repository": {
     "type": "git",
     "url": "git@bitbucket.org:thusfresh/web-app.git"
@@ -40,7 +40,8 @@
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
     "coffeeify": "~0.7.0",
-    "gulp": "^3.8.7",
+    "del": "^1.1.1",
+    "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^0.4.1",
     "gulp-filesize": "0.0.6",
