--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "browser-sync": "~1.3.6",
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
-    "coffeeify": "~0.7.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
@@ -52,8 +51,8 @@
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
-    "handlebars": "^1.3.0",
     "hbsfy": "~2.0.0",
+    "jstify": "^0.7.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "~0.2.1",
     "require-dir": "^0.1.0",
