--- a/package.json
+++ b/package.json
@@ -6,39 +6,11 @@
     "type": "git",
     "url": "git@bitbucket.org:thusfresh/web-app.git"
   },
-  "//": [
-    "The following 'underscore' example demonstrates exposing a module included ",
-    "by another module. If you were to npm install underscore separately and ",
-    "require('underscore'), you'd end up with two copies in your bundle. The one",
-    "you installed, and the one that shipped with another package (backbone in ",
-    "this example). This is an edge case and should rarely happen.",
-    "",
-    "The 'plugin' example makes that file requireable with `require('plugin')`,",
-    "and available to browserify-shim as 'plugin' on line 30."
-  ],
-  "browser": {
-    "underscore": "backbone/node_modules/underscore",
-    "plugin": "./src/javascript/vendor/jquery-plugin.js"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim",
-      "coffeeify",
-      "hbsfy"
-    ]
-  },
-  "browserify-shim": {
-    "plugin": {
-      "exports": "plugin",
-      "depends": [
-        "jquery:$"
-      ]
-    }
-  },
   "devDependencies": {
     "browser-sync": "~1.3.6",
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
+    "coffeeify": "~0.7.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
@@ -51,7 +23,6 @@
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
-    "hbsfy": "~2.0.0",
     "jstify": "^0.7.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "~0.2.1",
@@ -61,6 +32,7 @@
   },
   "dependencies": {
     "backbone": "~1.1.2",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "underscore": "^1.7.0"
   }
 }
