Adding jshint to the build process

--- a/.jshintrc
+++ b/.jshintrc
@@ -14,5 +14,10 @@
   "undef": true,
   "unused": true,
   "strict": true,
-  "jquery": true
+  "browserify": true,
+  "globals": {
+    "module": false,
+    "require": false
+  }
+//  "devel": true
 }
