--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "gulp-changed": "^0.4.1",
     "gulp-filesize": "0.0.6",
     "gulp-imagemin": "^0.6.2",
+    "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^1.4.2",
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
+    "jshint-stylish": "^1.0.0",
     "jstify": "^0.7.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "~0.2.1",
