--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "~1.3.6",
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
+    "chai": "^1.10.0",
     "coffeeify": "~0.7.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
@@ -27,6 +28,7 @@
     "jshint-stylish": "^1.0.0",
     "jstify": "^0.7.0",
     "lodash": "^2.4.1",
+    "mochify": "^2.1.1",
     "pretty-hrtime": "~0.2.1",
     "require-dir": "^0.1.0",
     "vinyl-source-stream": "~0.1.1",
