Adding mocha to jshint

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,9 +15,10 @@
   "unused": true,
   "strict": true,
   "browserify": true,
+  "mocha": true,
   "globals": {
     "module": false,
     "require": false
   }
-//  "devel": true
+
 }
