--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-awspublish": "0.0.24",
     "gulp-changed": "^0.4.1",
     "gulp-filesize": "0.0.6",
     "gulp-imagemin": "^0.6.2",
