Adding missing module:rfile

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "preprocessify": "0.0.3",
     "pretty-hrtime": "~0.2.1",
     "require-dir": "^0.1.0",
+    "rfile": "^1.0.0",
     "through": "^2.3.6",
     "vinyl-source-stream": "~0.1.1",
     "watchify": "^2.2.1"
