--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
     "chai": "^1.10.0",
+    "chokidar": "^0.12.6",
     "coffeeify": "~0.7.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
