Adding missing module:lodash.template

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jshint-stylish": "^1.0.0",
     "jstify": "^0.7.0",
     "lodash": "^2.4.1",
+    "lodash.template": "^2.4.1",
     "mochify": "^2.1.1",
     "node-notifier": "^4.0.3",
     "preprocessify": "0.0.3",
