--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash.template": "^2.4.1",
     "mochify": "^2.1.1",
     "node-notifier": "^4.0.3",
+    "node.extend": "^1.1.3",
     "preprocessify": "0.0.3",
     "pretty-hrtime": "~0.2.1",
     "require-dir": "^0.1.0",
