--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^0.12.6",
     "coffeeify": "~0.7.0",
     "del": "^1.1.1",
+    "falafel": "^0.3.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-awspublish": "0.0.24",
