--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
+    "imagemin": "^3.1.0",
     "jshint-stylish": "^1.0.0",
     "jstify": "^0.7.0",
     "lodash": "^2.4.1",
