--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "backbone": "~1.1.2",
+    "flux": "^2.0.1",
     "jquery": "~2.1.0",
     "underscore": "^1.7.0"
   }
