--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "type": "git",
     "url": "git@github.com:aboutlo/bbf.git"
   },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "analytics": "global:ga"
+  },
   "devDependencies": {
     "browser-sync": "~1.3.6",
     "browserify": "^8.0.2",
@@ -37,7 +45,7 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^1.4.2",
     "gulp-s3-upload": "^1.0.0",
-    "gulp-sass": "^1.1.0",
+    "gulp-sass": "~1.2.4",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
