--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.2.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-rev": "^3.0.1",
     "gulp-s3-upload": "^1.0.0",
     "gulp-sass": "~1.2.4",
     "gulp-sourcemaps": "^1.2.8",
